--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -22,21 +22,33 @@
         <meta charset="utf-8" />
         <meta name="format-detection" content="telephone=no" />
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
-        <link rel="stylesheet" type="text/css" href="css/index.css" />
-        <title>Hello World</title>
+        
+         <link rel="stylesheet"  href="css/jquery.mobile.min.css" />
+  
+         <script>
+           document.write('<script src="cordova.js"></sc' + 'ript>');
+         </script>
+  
+         <script src="js/jquery.min.js"></script>
+         <script src="js/app.js"></script>
+         <script src="js/bootstrap.js"></script>
+         <script src="js/jquery.mobile.min.js"></script>
+         <script src="js/jquery.jplayer.min.js"></script>
+        
+        <title>RaBe</title>
     </head>
     <body>
-        <div class="app">
-            <h1>Apache Cordova</h1>
-            <div id="deviceready" class="blink">
-                <p class="event listening">Connecting to Device</p>
-                <p class="event received">Device is Ready</p>
+        <div data-role="page">
+            <div data-role="header">
+                <h1>Single page</h1>
+            </div>
+            <div data-role="content"> 
+                <p>This is a single page boilerplate template that you can copy to build your first jQuery Mobile page. Each link or form from here will pull a new page in via Ajax to support the animated page transitions.</p>
+                <p>This template is standard HTML document with a single "page"</p>
+            </div>
+            <div data-role="footer">
+                <h4>Footer content</h4>
             </div>
         </div>
-        <script type="text/javascript" src="cordova.js"></script>
-        <script type="text/javascript" src="js/index.js"></script>
-        <script type="text/javascript">
-            app.initialize();
-        </script>
     </body>
 </html>
