--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -64,6 +64,19 @@
                     </div>
                 </div>
                 <img class="rabeapp-doge" src="img/radio-doge-nao.png" />
+                <p>
+                    This app was written over the course of an evening. It is rather unstable
+                    and poor on features. If it doesn't work you might have to kill it and
+                    restart it.
+                </p>
+                <div>
+                    The following devices have been tested and seem to work.
+                    <ul>
+                        <li>Samsung Galaxy S3 (cyanogenmod)</li>
+                        <li>HTC One (factory)</li>
+                    </ul>
+                    Please tell me if you test other devices so I can add them to the table.
+                </div>
             </div>
             <div data-role="footer">
                 <h4>2014 - Lucas Bickel</h4>
