--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -67,7 +67,7 @@
                 <p>
                     This app was written over the course of an evening. It is rather unstable
                     and poor on features. If it doesn't work you might have to kill it and
-                    restart it.
+                    restart it. Be patient, for some reason intial buffering takes very long.
                 </p>
                 <div>
                     The following devices have been tested and seem to work.
@@ -75,11 +75,15 @@
                         <li>Samsung Galaxy S3 (cyanogenmod)</li>
                         <li>HTC One (factory)</li>
                     </ul>
-                    Please tell me if you test other devices so I can add them to the table.
+                    Please tell me if you test other devices so I can add them to the list.
                 </div>
+                <p>
+                    This app is in dire need of a real design and more features. Please contact me
+                    if you have questions or would like to help the project.
+                </p>
             </div>
             <div data-role="footer">
-                <h4>2014 - Lucas Bickel</h4>
+                <h4>2014 - <a href="mailto:hairmare@purplehaze.ch?subject=RaBe%20Android%20App%20Feedback">Lucas Bickel</a></h4>
             </div>
         </div>
     </body>
